2.1.0/_sources/gallery/text_labels_and_annotations/autowrap.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_autowrap.py:


==================
Auto-wrapping text
==================

Matplotlib can wrap text automatically, but if it's too long, the text will be
displayed slightly outside of the boundaries of the axis anyways.




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_autowrap_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt

    fig = plt.figure()
    plt.axis([0, 10, 0, 10])
    t = "This is a really long string that I'd rather have wrapped so that it"\
        " doesn't go outside of the figure, but if it's long enough it will go"\
        " off the top or bottom!"
    plt.text(4, 1, t, ha='left', rotation=15, wrap=True)
    plt.text(6, 5, t, ha='left', rotation=15, wrap=True)
    plt.text(5, 5, t, ha='right', rotation=-15, wrap=True)
    plt.text(5, 10, t, fontsize=18, style='oblique', ha='center',
             va='top', wrap=True)
    plt.text(3, 4, t, family='serif', style='italic', ha='right', wrap=True)
    plt.text(-1, 0, t, ha='left', rotation=-15, wrap=True)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: autowrap.py <autowrap.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: autowrap.ipynb <autowrap.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
